--- a/.env
+++ b/.env
@@ -4,14 +4,14 @@ MQTT_PORT=1883
 MQTT_TOPIC_WATERLEVEL=iot/waterlevel  # Topik utama untuk data sensor
 MQTT_TOPIC_STATUS=iot/status  # Topik untuk status periodik
 MQTT_TOPIC_COMMAND=iot/command  # Topik untuk status periodik
-
+MQTT_BASE_TOPIC_COMMAND=iot/sensor
 
 # InfluxDB Configuration
 INFLUXDB_URL=http://localhost:8086  # Pastikan mengarah ke InfluxDB yang benar
 INFLUXDB_TOKEN=admin123
 INFLUXDB_ORG=my-org
-INFLUXDB_BUCKET=Water_Level_Data
-INFLUX_BUCKET = Water_Level_Data
+INFLUXDB_BUCKET=DummyWaterLevel
+INFLUX_BUCKET = DummyWaterLevel
 INFLUX_BUCKET_AUTH = iot_center_devices
 
 # Redpanda Event Broker
