--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ MQTT_PORT=1883
 MQTT_TOPIC_WATERLEVEL=iot/waterlevel  # Topik utama untuk data sensor
 MQTT_TOPIC_STATUS=iot/status  # Topik untuk status periodik
 MQTT_TOPIC_COMMAND=iot/command  # Topik untuk status periodik
+REGISTRATION_RESPONSE_TOPIC=iot/register-device/response
+REGISTRATION_REQUEST_TOPIC=iot/register-device/request
 MQTT_BASE_TOPIC_COMMAND=iot/sensor
 
 # InfluxDB Configuration
