--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ MQTT_BASE_TOPIC_COMMAND=iot/sensor
 INFLUXDB_URL=http://localhost:8086  # Pastikan mengarah ke InfluxDB yang benar
 INFLUXDB_TOKEN=admin123
 INFLUXDB_ORG=my-org
-INFLUXDB_BUCKET=DummyWaterLevel
-INFLUX_BUCKET = DummyWaterLevel
+INFLUXDB_BUCKET=TestingBUcketWaterLevel
+INFLUX_BUCKET = TestingBUcketWaterLevel
 INFLUX_BUCKET_AUTH = iot_center_devices
 
 # Redpanda Event Broker
